--- a/src/components/modals/AddEventModal/style.scss
+++ b/src/components/modals/AddEventModal/style.scss
@@ -15,7 +15,7 @@
     .AddEventModal__content {
         max-width: 42em;
         margin: 2em;
-        padding: 1em;
+        padding: 1em 3em;
         border-radius: $radius;
         background-color: $background-secondary;
 
