--- a/src/components/EventList/style.scss
+++ b/src/components/EventList/style.scss
@@ -1,2 +1,14 @@
+@import "../../styles/variables/colors";
+@import "../../styles/variables/dimensions";
+
 .EventList {
+    .EventList__list{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        .EventList__list__item{
+            margin: 1em 0;
+        }
+    }
 }
