--- a/src/styles/base/_common.scss
+++ b/src/styles/base/_common.scss
@@ -18,12 +18,9 @@ html,body {
 .App {
     width: 100%;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 
     .App__title {
+        text-align: center;
         color: $font-secondary;
         text-transform: uppercase;
     }
@@ -31,6 +28,7 @@ html,body {
 
 .mainContainer {
     max-width: 42em;
+    margin: 0 auto;
     padding: 2em;
     border-radius: $radius;
     background-color: $background-light;
